# thebabz

./: Cargo.toml
src/: errors.rs  main.rs  router.rs  routes.rs  state.rs
src/controllers/: index.rs  landing.rs
templates/: base.html  index.html
templates/errors/: 500.html
templates/landing/: landing.html.j2
