[package]
name = "thebabz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", default-features = false, features = ["tokio", "http1"] }
minijinja = { version = "1.0.12", default-features = false, features = ["builtins", "multi_template", "unicode", "loader"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", default-features = false, features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt"] }
